[gd_scene load_steps=10 format=2]

[ext_resource path="res://Turret.gd" type="Script" id=1]
[ext_resource path="res://game assets/Turret Prototype/TurretBase.png" type="Texture" id=2]
[ext_resource path="res://game assets/Turret Prototype/Pupilturret2.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.5
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 3.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "activate"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=6]
resource_name = "deactivate"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2, 1, 0 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 78.5

[node name="Turret_Base" type="StaticBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Detector" type="Node2D" parent="."]
rotation = 1.5708

[node name="line" type="RayCast2D" parent="Detector"]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 73 )
__meta__ = {
"_edit_group_": true
}

[node name="turretpupil" type="KinematicBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="turretpupil"]
position = Vector2( 6, 0.5 )
texture = ExtResource( 3 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="turretpupil"]
position = Vector2( 0.5, 0 )
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="turretpupil"]
anims/RESET = SubResource( 3 )
anims/activate = SubResource( 4 )
anims/deactivate = SubResource( 6 )

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource( 5 )

[connection signal="leftvision" from="." to="." method="_on_Turret_Base_leftvision"]
[connection signal="regainedvision" from="." to="." method="_on_Turret_Base_regainedvision"]
[connection signal="trigger" from="." to="." method="_on_Turret_Base_trigger"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
